welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:4: error: '<-' expected but ')' found.
  for(i -> nums)
               ^maxValue:9: error: illegal start of simple expression
} 
^